// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> renders an error if loading failed 1`] = `
<div
  className={undefined}
>
  <p>
    Oops, Failed to load list!
  </p>
</div>
`;

exports[`<Home /> renders the <UserList /> if loading was successful 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <h4>
      User List
    </h4>
    <ul>
      <li>
        <a
          href="/UserInfo/1"
          onClick={[Function]}
        >
          Welly
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<Home /> renders the loading status if data invalid 1`] = `
<div
  className={undefined}
>
  <p>
    Loading...
  </p>
</div>
`;

exports[`<Home /> renders the loading status if loading data 1`] = `
<div
  className={undefined}
>
  <p>
    Loading...
  </p>
</div>
`;
